refactor(profiles): enforce clean architecture boundaries